# jax_hf

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MIGRATION.md  README.md  TASKS.md  THIRD_PARTY_NOTICES.md  pyproject.toml  setup.py
.claude/: settings.local.json
.github/workflows/: build-and-test.yml  release.yml
benchmarks/: bilayer_dm_smoke.py  block_qr_benchmark.py  cayley_baseline.txt  cayley_breakdown.py  cayley_breakdown_named.py  cayley_correctness_check.py  cayley_equivalence_check.py  cayley_per_iter_benchmark.py  cayley_solver_benchmark.py  check_final_fock_redundant.py  check_project_idempotent.py  fft_layout_benchmark.py  mu_convergence.py
debug/: benchmark_rtr_vs_qr.py  benchmark_subspace.py  repro_solver_ordering.py  tetralayer_cg_vs_lbfgs.py  tetralayer_qr_vs_rtr.py
examples/: _bilayer_common.py  contimod_example_meshgrid_offline.py  multilayer_graphene_baseline_check.py  multilayer_graphene_density_scan.py  multilayer_graphene_density_scan_extended.py  multilayer_graphene_density_scan_hartree.py  multilayer_graphene_reference_scf_scan.py
playground-02-06-2026/: __init__.py  multibranch.py  repro_contimod_10_graphene_bilayer_linecuts_variational_plotly.py  variational_hf.py
playground-02-09-2026/: README.md  pyproject.toml
playground-02-09-2026/examples/: repro_contimod_10_graphene_bilayer_linecuts_variational_sectortrack_plotly.py
playground-02-09-2026/jax_hf_variational/: __init__.py  utils.py  variational_hf.py
src/: README.md
src/jax_hf/: __init__.py  api.py  continuation.py  deflation.py  fock.py  linalg.py  main.py  mixing.py  multigrid.py  problem.py  reference_scf.py  solver.py  superlattice.py  symmetry.py  utils.py  variational.py  variational_qr.py  variational_rtr.py  wrappers.py
tests/: conftest.py  generate_bilayer_reference.py  generate_meshgrid_regression_case_v1.py  test_api.py  test_bilayer_regression.py  test_continuation.py  test_deflation.py  test_embedded_reference_potential.py  test_linalg.py  test_main.py  test_meshgrid_regression.py  test_mixing.py  test_multigrid.py  test_package_import.py  test_scf_acceleration.py  test_solver.py  test_solver_newton.py  test_superlattice.py  test_symmetry.py  test_variational.py  test_variational_qr.py  test_variational_rtr.py
tests/data/: bilayer_reference.npz  meshgrid_regression_case_v1.npz
