[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax_hf_variational"
version = "0.1.0"
description = "Standalone variational finite-T Hartree-Fock solver built from playground prototypes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jax>=0.4.30",
  "jaxlib>=0.4.30",
  "numpy>=1.26",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jax_hf_variational*"]
